Bug 126768 - FILEOPEN DOCX Absolute link broken in attached file
Summary: FILEOPEN DOCX Absolute link broken in attached file
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:6.4.0
Keywords:
Depends on:
Blocks: DOCX-Hyperlink
  Show dependency treegraph
 
Reported: 2019-08-08 13:19 UTC by Tünde Tóth
Modified: 2019-08-12 09:46 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the problem in Writer. (67.46 KB, image/png)
2019-08-08 13:21 UTC, Tünde Tóth
Details
Example file from Word with two absolute links. (12.05 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-08-08 13:23 UTC, Tünde Tóth
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tünde Tóth 2019-08-08 13:19:57 UTC
Description:
Absolute link in attached DOCX document created with Microsoft Word is broken when the document is opened in LibreOffice Writer.

Steps to Reproduce:
1. Open the attached file in LibreOffice Writer.
2. Ctrl+Click the first link. (C:\TEMP\test.docx)

Actual Results:
The hyperlink doesn’t work.

Expected Results:
The hyperlink should work in Writer.


Reproducible: Always


User Profile Reset: No



Additional Info:
LibreOffice Details:
Version: 6.4.0.0.alpha0+ (x64)
Build ID: 3ab2df3cf755ecd0e3e31ad06872426d24222c31
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: threaded
Comment 1 Tünde Tóth 2019-08-08 13:21:15 UTC
Created attachment 153226 [details]
Screenshot of the problem in Writer.
Comment 2 Tünde Tóth 2019-08-08 13:23:19 UTC
Created attachment 153227 [details]
Example file from Word with two absolute links.
Comment 3 NISZ LibreOffice Team 2019-08-09 07:34:39 UTC
Confirmed with:

Version: 6.4.0.0.alpha0+ (x64)
Build ID: d5220a535400440c657dc3000a7e078f17112861
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: threaded
Comment 4 Commit Notification 2019-08-09 13:33:03 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/a81ef7f4ae8021e3f6ce782ebc526e798a814a5e%5E%21

tdf#126768 DOCX import: fix absolute hyperlinks to documents

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.