tdf#126768 DOCX import: fix absolute hyperlinks to documents

file:///absolute\\path\\to\\file didn't work in Writer.

Change-Id: I61135668e47bc1d67afb4ed6bec6a90744d295cf